      Veden's Rampant Industry airfilter (low UPS consumption goes here!) and ItemCollector mods ideas and code used.
      - Creep generation balance. One more attempt to avoid too much biomass for 200%+ enemy bases density.
      - Creep pollution absorption increased from 5 to 10 dead trees per tile for Deathworld mode and Creeper mod balance.

---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 2022-01-11
  Changes:
    - Changed icon for fake creep for shovel and deconstruction.
    - 8 biomass to 1 biters research.
    - Creep generation optimizations and balancing for casual and new enemies games.
    - Biters research pack crafting fix (Thanks to DimmuR). Pyanodons mods compatibility verified.
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2021-12-19
  Changes:
    - Fixed creep collection restriction issue when selecting areas with several creep footprints. Now true creep only from one patch a time will be collected.
    - Creep generation optimizations and balance. 2-3 times less biomass compared to enemies bases generated by version 1.1.1 (replaced by fake creep till the same total amount).
    - More biomass from bases of the same nests/worms count with evolution growth. Generated creep patch area increasing with evolution growth is doubled.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2021-12-16
  Changes:
    - Footprint generation (more optimizations, less biomass in big late game areas).
    - Fix for fake creep deconstruction (bots will bring back some unexpected ingredients, because they are forced by Wube to bring you something...).
    - Complete logics change for creep collecting restrictions. Simple large protection range for Rampant new enemies mode is replaced with some smart restrictions for everyone.