@@ -9,12 +9,13 @@ Main goal of Warmonger mod is to add challenge and interest for warfare-focused 
 Creep must be harvested for military technologies progress. In the endgame less creep is required, but no way to completely automate and produce biomass without fighting  native fauna.
 
 Changes comparing to K2 feature:
-- creep absorbs much less pollution,
+- creep absorbs much less pollution, but still noticeably more than common tiles,
 - creep footprint grows with evolution,
 - creep damages buildings (e.g. "turrel creep" requires timely repairing them), can be turned off in console with command "/disable-corrosion"
-- creep is collected by special buildings, not manually. Graphics for them was taken from Amator Phasma Coal&Steam and Yuoki Industries mods.
+- creep is collected by special buildings, not manually. Graphics for them was taken from beautiful old Amator Phasma Coal&Steam and Yuoki Industries mods.
 - creep can be collected only after purging enemy nests and worms nearby. Abuse with path tiles replacement is allowed.
 - biters are immune to any viruses,
+- biters revenge is expected for use of weapons of remote destruction in mid/end-game Can be disabled with "/disable-corrosion-strikes" and vice versa.
 - no peaceful game mode is expected in any form. Biomass is heavily used in midgame and later on for military science packs and Rampant Arsenal items. There are a lot of Factorio great mods for pure automation joy (Krastorio2, IR2, AAI-Industry, SE, B&A and many others).
 
 Mod is tested for compatibility with Rampant, Rampant Arsenal and Rampant Industry. I use SpaceX for endgame, but would be glad to find alternative (no luck so far).
