@@ -83,6 +83,10 @@ script.on_event(defines.events.on_entity_died, function(e)
   corrosion.disengaging(e.entity)
   if e.entity.valid and (e.entity.name == "creep-miner1-chest" or e.entity.name == "creep-miner0-chest") then
     creep_eater.remove (e.entity, true)
+  elseif global.corrosion.enabled and global.corrosion.strike_back
+   and e.entity.valid and (e.entity.force.name == "enemy") and (e.entity.type == "unit-spawner" or e.entity.type == "turret")
+    and game.forces.enemy.evolution_factor > 0.35 then
+     creep.check_strike(e.entity, e.cause, e.force)
   end
 end)
 
