@@ -273,8 +273,11 @@ kr-roboport-modes-not-supported=This roboport cannot change modes
 kr-shelter-is-inactive=Shelter is inactive
 kr-transceiver-is-inactive=Transceiver is inactive
 wm-protected-creep-in-selection=Nest or worm is too close to collect creep
-corrosion-disabled=Turrets corrosion by creep acid is disabled !
-corrosion-enabled=Turrets corrosion by creep acid is enabled !
+corrosion-disabled=Building corrosion by creep acid is disabled !
+corrosion-enabled=Buildings corrosion by creep acid is enabled !
+kr-amount-in-selection=Amount of creep selected:__1__ __2__ and __3__ __4__
+corrosion-strikes-disabled=Biters retaliation strikes are disabled !
+corrosion-strikes-enabled=Biters retaliation strikes are enabled !
 
 
 [modifier-description]
